--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^1.19.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.7.3"
   }
 }
