--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "nodemon": "^1.19.3"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "config": "^3.2.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3"
   }
 }
