--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "react-bootstrap": "^1.0.0-beta.12"
   }
 }
