--- a/Client/stock-app/package.json
+++ b/Client/stock-app/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
+    "react-filter-search": "^1.0.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2"
   },
