--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_KEY=W1R2GKR6A741MTP0
 JWS=My_SECRET_KEY
+DB=mongodb+srv://hackny:Winner@localroasters-1mhoa.mongodb.net/TTP?retryWrites=true&w=majority
